cmake_minimum_required(VERSION 3.13)
project(A2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Build)
include_directories(Build/bin)
include_directories(cmake-build-debug)
include_directories(Main)
include_directories(Main/BufferMgr)
include_directories(Main/BufferMgr/headers)
include_directories(Main/BufferMgr/source)
include_directories(Main/BufferTest)
include_directories(Main/BufferTest/source)
include_directories(Main/Catalog)
include_directories(Main/Catalog/headers)
include_directories(Main/Catalog/source)
include_directories(Main/DatabaseTable)
include_directories(Main/DatabaseTable/headers)
include_directories(Main/DatabaseTable/source)
include_directories(Main/Qunit)
include_directories(Main/Qunit/headers)
include_directories(Main/Record)
include_directories(Main/Record/headers)
include_directories(Main/Record/source)
include_directories(Main/RecordTest)
include_directories(Main/RecordTest/source)

add_executable(A2
        Build/SConstruct
        Build/supplier.tbl
        cmake-build-debug/A2.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        Main/BufferMgr/headers/CheckLRU.h
        Main/BufferMgr/headers/it.cc
        Main/BufferMgr/headers/MyDB_BufferManager.h
        Main/BufferMgr/headers/MyDB_Page.h
        Main/BufferMgr/headers/MyDB_PageHandle.h
        Main/BufferMgr/headers/PageCompare.h
        Main/BufferMgr/headers/TableCompare.h
        Main/BufferMgr/source/MyDB_BufferManager.cc
        Main/BufferMgr/source/MyDB_Page.cc
        Main/BufferTest/source/BufferQUnit.cc
        Main/Catalog/headers/MyDB_AttType.h
        Main/Catalog/headers/MyDB_Catalog.h
        Main/Catalog/headers/MyDB_PageType.h
        Main/Catalog/headers/MyDB_Schema.h
        Main/Catalog/headers/MyDB_Table.h
        Main/Catalog/source/MyDB_Catalog.cc
        Main/Catalog/source/MyDB_Schema.cc
        Main/Catalog/source/MyDB_Table.cc
        Main/DatabaseTable/headers/MyDB_PageReaderWriter.h
        Main/DatabaseTable/headers/MyDB_PageRecIterator.h
        Main/DatabaseTable/headers/MyDB_RecordIterator.h
        Main/DatabaseTable/headers/MyDB_TableReaderWriter.h
        Main/DatabaseTable/headers/MyDB_TableRecIterator.h
        Main/DatabaseTable/source/MyDB_PageReaderWriter.cc
        Main/DatabaseTable/source/MyDB_PageRecIterator.cc
        Main/DatabaseTable/source/MyDB_TableReaderWriter.cc
        Main/DatabaseTable/source/MyDB_TableRecIterator.cc
        Main/Qunit/headers/QUnit.h
        Main/Record/headers/MyDB_AttVal.h
        Main/Record/headers/MyDB_Record.h
        Main/Record/source/MyDB_AttVal.cc
        Main/Record/source/MyDB_Record.cc
        Main/RecordTest/source/RecordQUnit.cc)
